--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ pring.security.enabled=true
 #DataSource Config
 spring.datasource.url = jdbc:mysql://localhost:3306/vitaplate
 spring.datasource.username = root
-spring.datasource.password = Mysql123
+spring.datasource.password = root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Hibernate Config
