Added otp auth functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,4 +34,10 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 external.url=${NGROK_URL}
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.http.converter.json=DEBUG
+
+server.error.include-message=always
+server.error.include-binding-errors=always
+logging.level.org.springframework.web=DEBUG
 
