add email verify

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,10 +26,15 @@ logging.level.org.springframework.security=DEBUG
 #email authentication
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=scanmarkk@gmail.com
+spring.mail.username=vitaplate123@gmail.com
 
-#app specific password created for main and name of device given as ScaNMark SMTP
-spring.mail.password=uimkkgqjhzgqfxyn
+# #app specific password created for main and name of device given as ScaNMark SMTP
+# spring.mail.password=uimkkgqjhzgqfxyn
+# spring.mail.properties.mail.smtp.auth=true
+# spring.mail.properties.mail.smtp.starttls.enable=true
+
+#app specific password created for main and name of device given as VitaPlate SMTP
+spring.mail.password=itsleyqmgruocnjd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
